melhoramento de layouts activity_main.xml, fragment_search.xml, fragment_home.xml, fragment_profile.xml

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,6 @@ dependencies {
     implementation(libs.firebase.auth)
     implementation(libs.google.firebase.firestore)
     implementation libs.firebase.analytics
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
 }
