Botao de sair da conta (logout) saiu do perfil para as definições, agora a foto de perfil já dá para alterar no activity_edit_profile.xml

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,9 @@ dependencies {
     implementation(libs.firebase.auth)
     implementation(libs.google.firebase.firestore)
     implementation libs.firebase.analytics
-    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    implementation libs.swiperefreshlayout
+    implementation(libs.firebase.storage)
+    implementation(libs.glide)
+    implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.1.0")
 
 }
