Adicionei o resize na foto de perfil quando se muda a foto

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation(libs.firebase.storage)
     implementation(libs.glide)
     implementation(libs.swiperefreshlayout.v110)
+    implementation("com.vanniktech:android-image-cropper:4.5.0")
 
 
 }
