--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,8 +49,10 @@ dependencies {
     implementation libs.swiperefreshlayout
     implementation(libs.firebase.storage)
     implementation(libs.glide)
-    implementation(libs.swiperefreshlayout.v110)
-    implementation("com.vanniktech:android-image-cropper:4.5.0")
+    implementation libs.swiperefreshlayout
+    implementation(libs.android.image.cropper)
+     
+
 
 
 }
