Dark mode quase finalizado, melhorias e correção de algumas pequenas coisas

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,8 @@ dependencies {
     implementation(libs.glide)
     implementation libs.swiperefreshlayout
     implementation(libs.android.image.cropper)
-     
+    implementation libs.glide.v4120
+    annotationProcessor libs.compiler
 
 
 
