--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,27 +15,26 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UniVerse"
         tools:targetApi="31">
-
+        <activity
+            android:name=".FeedTabFragment"
+            android:exported="false" />
         <activity
             android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
         <activity
             android:name="com.canhub.cropper.CropImageActivity"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
             android:exported="true"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
             tools:replace="android:theme, android:exported" />
-
         <activity
             android:name=".MainActivity"
             android:exported="false" />
-
         <activity
             android:name=".RegisterActivity"
             android:exported="false" />
@@ -54,7 +53,6 @@
         <activity
             android:name=".FullScreenImageActivity"
             android:exported="false" />
-
         <activity
             android:name=".PublicProfileActivity"
             android:exported="false" />
@@ -64,7 +62,6 @@
         <activity
             android:name=".EditProfileActivity"
             android:exported="false" />
-
         <activity
             android:name=".SettingsActivity"
             android:exported="false" />
@@ -74,7 +71,6 @@
         <activity
             android:name=".ChangePasswordActivity"
             android:exported="false" />
-
     </application>
 
 </manifest>
