--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.UniVerse"
         tools:targetApi="31">
         <activity
-            android:name=".FeedTabFragment"
+            android:name=".BlockedUsersActivity"
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
