--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation(libs.android.image.cropper)
     implementation libs.glide.v4120
     annotationProcessor libs.compiler
+    implementation libs.firebase.messaging
 
 
 
