--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,15 @@
         android:theme="@style/Theme.UniVerse"
         tools:targetApi="31">
 
-        <activity
-            android:name=".BlockedUsersActivity"
-            android:exported="false" />
+        <service
+            android:name=".MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+
 
         <activity
             android:name=".LoginActivity"
@@ -36,6 +42,9 @@
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
             tools:replace="android:theme, android:exported" />
 
+        <activity
+            android:name=".BlockedUsersActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="false" />
