--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+activityVersion = "1.8.0"
 agp = "8.13.2"
 androidImageCropper = "4.7.0"
 firebaseBom = "34.7.0"
@@ -19,6 +20,7 @@ playServicesMlkitTextRecognitionCommon = "19.1.0"
 
 
 [libraries]
+activity-v180 = { module = "androidx.activity:activity", version.ref = "activityVersion" }
 android-image-cropper = { module = "com.vanniktech:android-image-cropper", version.ref = "androidImageCropper" }
 compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glideVersion" }
 firebase-analytics = { module = "com.google.firebase:firebase-analytics", version = "23.0.0" }
